# libsean

./: AUTHORS  Makefile.am  README  autogen.sh  configure.in  libsean.pc.in
include/: Makefile.am  sean.h
programs/: Makefile.am  sean-gui.c  sean-scan.c
src/: Makefile.am  bar.c  bar.h  init.c  pixbuf.c  pixbuf.h  scan.c  scan.h  video.c  video.h
tests/: Makefile.am  filter.plot  test_detect.c
